--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 body{
   background-color: azure;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.taskslist{
+  background-color: aqua;
 }
