ocupamos la depencencia de react-router-dom para redirigir nuestra pagina a las rutas creadas desde App.jsx, ademas ocupamos la funcion Dispatch para disparar el evento al momento de eliminar un task desde el reducer de taskSlice.js

--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,11 @@ body{
   align-items: center;
 }
 .taskslist{
+
   background-color: aqua;
+  align-items: center;
+  justify-content: center;
+}
+.delete{
+  background-color: azure;
 }
