--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,3 @@
-body{
-  background-color: azure;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.taskslist{
-
-  background-color: aqua;
-  align-items: center;
-  justify-content: center;
-}
-.delete{
-  background-color: azure;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
